k8s/networking/omada-controller/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omada-controller
  namespace: networking
spec:
  parentRefs:
    - name: envoy-gw
      sectionName: https
      namespace: networking
  hostnames:
    - omada.tale.me
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: omada-controller-tls
